salesforce/force-app/main/default/objects/Sync_Run_Event__e/Sync_Run_Event__e.object-meta.xml
<CustomObject>
    <label>Sync Run Event</label>
    <pluralLabel>Sync Run Events</pluralLabel>
    <description>Published by DeltaSyncJob after every page commits: which mailbox, which page,
        how many records, and the stage reached (running/throttled/invalid_token/completed/failed).
        A subscribing LWC (syncMonitor, referenced in the write-up) uses empApi to show a live
        run without polling. This is the direct analogue of "the stage is written on the record"
        in the Deluge version, made push-based instead of pull-based.</description>
</CustomObject>