salesforce/force-app/main/default/objects/Sync_Run_Event__e/fields/Mailbox_Key__c.field-meta.xml
<CustomField>
    <fullName>Mailbox_Key__c</fullName>
    <label>Mailbox Key</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>