salesforce/force-app/main/default/objects/Sync_Run_Event__e/fields/Page__c.field-meta.xml
<CustomField>
    <fullName>Page__c</fullName>
    <label>Page</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>