salesforce/force-app/main/default/objects/Sync_Run_Event__e/fields/Records_In_Page__c.field-meta.xml
<CustomField>
    <fullName>Records_In_Page__c</fullName>
    <label>Records In Page</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>