salesforce/force-app/main/default/objects/Sync_Run_Event__e/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Text</type>
    <length>40</length>
    <required>true</required>
</CustomField>